# Media-Player-using-natural-voice-NUI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: 01_project_summary.md  02_voice_control_vs_ai_assistant.md  03_modalities.md  04_affective_integration.md  05_state_of_the_art.md  06_added_value.md  07_system_diagram.md  08_user_journey.md  09_interaction_flow.md  10_heuristic_evaluation.md  11_lofi_testing.md  12_test_plan.md  13_final_reflection.md
logs/: .gitkeep
scripts/: generate_test_report.py  record_test_audio.py
src/echo_sync/: __init__.py  __main__.py  app.py  main.py
src/echo_sync/ai/: __init__.py  context_mapper.py  intent_classifier.py  intent_schema.py  safety_filter.py
src/echo_sync/audio/: __init__.py  ducking.py  earcons.py  recorder.py  silence_detector.py  tts.py
src/echo_sync/config/: __init__.py  prompts.py  settings.py
src/echo_sync/interaction/: __init__.py  dialog_manager.py  guided_help.py  response_templates.py  state_machine.py
src/echo_sync/logging_utils/: __init__.py  interaction_logger.py
src/echo_sync/media/: __init__.py  player_base.py  playlist_manager.py  pygame_player.py  vlc_player.py
src/echo_sync/speech/: __init__.py  offline_stt.py  openai_stt.py  stt_base.py
tests/: test_app_state.py  test_context_mapper.py  test_demo_routing.py  test_ducking.py  test_guided_help.py  test_intent_classifier.py  test_playlist_manager.py  test_safety_filter.py
