[project]
name = "echo-sync"
version = "0.1.0"
description = "Echo-Sync: An inclusive, screen-free Natural User Interface media player for blind and motor-impaired users."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Group 7", email = "group7@htw-berlin.de"},
]
keywords = ["nui", "voice-control", "accessibility", "media-player", "ai-assistant"]

dependencies = [
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "python-vlc>=3.0.20",
    "pygame-ce>=2.5.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
offline = [
    "faster-whisper>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
